# itravel

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: amap_stub.py  auth.py  config.py  crud.py  db.py  init_db.py  llm.py  main.py  schemas.py  seed.py  transit.py  validators.py  workflow.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: auth.py  itineraries.py  plan.py  poi.py  transit.py
backend/app/services/: __init__.py  amap_service.py  itinerary_service.py  plan_service.py  poi_service.py  transit_service.py
backend/app/tools/: __init__.py  route_sort_day.py  schemas.py
backend/tests/: test_amap_service.py  test_auth_rate_limit_internals.py  test_db_init.py  test_itineraries_crud.py  test_m2_workflow.py  test_m3_candidates.py  test_m4_transit.py  test_m5_auth.py  test_route_sort_day_tool.py  test_schema_validation.py
docs/: CONTRIBUTING.md  dev_doc.md  prd.md
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
frontend/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/assets/: chinaGeo.ts
frontend/src/components/: AuthPanel.tsx  Feed.tsx  MapView.tsx  RequireFlow.tsx  Schedule.tsx  ThemeToggle.tsx  Toast.tsx  ui.tsx
frontend/src/hooks/: useTransitRefiner.ts
frontend/src/lib/: amap.ts  cityCatalog.ts  flights.ts  planController.ts
frontend/src/store/: authStore.ts  chatStore.ts  draftPoisStore.test.ts  draftPoisStore.ts  flightStore.ts  itineraryStore.ts  (+5 more)
(+26 files in other folders)
