[project]
name = "itravel-backend"
version = "0.1.0"
description = "智能旅游规划与可视化行程 Agent — BFF backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "openai>=1.55",
    "httpx>=0.27",
    "cachetools>=5.5",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false
